@@ -27,3 +27,50 @@
   padding: 3px; 
   margin:3px;  
 }
+
+.admin-advising-settings {
+  font-size: 0.85em;
+}
+
+/* Permissions form */
+.admin-perm-table td {
+  font-size: 0.85em;
+}
+
+.admin-perm-table td.perm-cb {
+  text-align: center;
+}
+
+.admin-perm-table .perm-module-name {
+  background-color: #D4E7F3;
+  font-weight: bold;
+  padding: 3px;
+  border-top: 1.5em solid white;
+}
+
+.admin-perm-table .perm-cb-row-even {
+  background-color: #EDF5FA;
+}
+
+.admin-perm-table .perm-details {
+  padding-left: 20px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
+
+.admin-perm-table .perm-name {
+  font-style: italic;
+  font-size: 0.9em;
+  color: #aaa;
+  display: none;
+  
+}
+
+.admin-perm-table .perm-desc {
+  color: #777;
+  font-size: 0.9em;
+}
+
+
+
+
